[gd_scene load_steps=23 format=3 uid="uid://cc138e8l2q7l7"]

[ext_resource type="Script" path="res://Scripts/Level_Transition.gd" id="1_d73g1"]
[ext_resource type="Texture2D" uid="uid://dyw0opn1wokep" path="res://Sprites/BG/Gold Miner - Backgrounds.png" id="1_jovbi"]
[ext_resource type="Texture2D" uid="uid://d1j51b7p1urna" path="res://Sprites/Character.png" id="2_7s4fi"]
[ext_resource type="Texture2D" uid="uid://d34tbfjaje0fg" path="res://Sprites/clawbody.png" id="3_7w0a8"]
[ext_resource type="PackedScene" uid="uid://pd3hwwbtnkr5" path="res://Scenes/rope.tscn" id="4_ivv8x"]
[ext_resource type="Script" path="res://Scripts/LineRope.gd" id="5_lvbhh"]
[ext_resource type="PackedScene" uid="uid://djmjynnpljydo" path="res://Scenes/claw.tscn" id="6_w47ky"]
[ext_resource type="PackedScene" uid="uid://dni1ajlkfdevr" path="res://Scenes/tnt.tscn" id="7_4urx6"]
[ext_resource type="PackedScene" uid="uid://bf8an6ps50gf3" path="res://Scenes/stone.tscn" id="8_1xpyo"]
[ext_resource type="PackedScene" uid="uid://bm8lt2b434k4m" path="res://Scenes/diamond.tscn" id="9_u8xtt"]
[ext_resource type="PackedScene" uid="uid://b1x2ujuk78fm6" path="res://Scenes/big_gold.tscn" id="10_0ytdb"]
[ext_resource type="PackedScene" uid="uid://b4ilv3c82x7gj" path="res://Scenes/normal_gold.tscn" id="11_deyou"]
[ext_resource type="PackedScene" uid="uid://djfdkrpcwqolq" path="res://Scenes/small_gold.tscn" id="12_e0frq"]
[ext_resource type="FontFile" uid="uid://dgsdwbgcyr2gf" path="res://dogicapixelbold.ttf" id="13_7f312"]
[ext_resource type="Script" path="res://Scripts/MoneyCount.gd" id="14_2dipp"]
[ext_resource type="PackedScene" uid="uid://2amkb6e4j4x7" path="res://Scenes/money_bag.tscn" id="14_ootwe"]
[ext_resource type="Script" path="res://Scripts/GoalSetting.gd" id="15_466aa"]
[ext_resource type="Script" path="res://Scripts/LevelSetting.gd" id="16_7ynlc"]
[ext_resource type="Script" path="res://Scripts/CountdownTimer.gd" id="17_03wwd"]
[ext_resource type="StyleBox" uid="uid://b8cjswdjawi40" path="res://Styling/button.tres" id="18_m80ua"]
[ext_resource type="StyleBox" uid="uid://2l7nww6tbl2g" path="res://Styling/buttonPressed.tres" id="19_h6cef"]
[ext_resource type="PackedScene" uid="uid://dsg2aw8fjkk87" path="res://Scenes/pause_menu.tscn" id="20_6kyt4"]

[node name="Level 2" type="Node2D"]
script = ExtResource("1_d73g1")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(580, 324)
scale = Vector2(2.08633, 1.91716)
texture = ExtResource("1_jovbi")

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(627, 127)
scale = Vector2(1.26364, 1.34615)
texture = ExtResource("2_7s4fi")

[node name="Clawbody" type="Sprite2D" parent="."]
position = Vector2(593, 157)
texture = ExtResource("3_7w0a8")

[node name="Rope" parent="." instance=ExtResource("4_ivv8x")]
position = Vector2(575, 162)
scale = Vector2(1, 1.23914)

[node name="Line2D" type="Line2D" parent="Rope" node_paths=PackedStringArray("first_target", "second_target")]
width = 4.5
default_color = Color(0.321569, 0.290196, 0.388235, 1)
script = ExtResource("5_lvbhh")
first_target = NodePath("..")
second_target = NodePath("../Claw")

[node name="Claw" parent="Rope" instance=ExtResource("6_w47ky")]
scale = Vector2(1, 0.832062)

[node name="TNTs" type="Node2D" parent="."]

[node name="TNT" parent="TNTs" instance=ExtResource("7_4urx6")]
position = Vector2(605, 418)

[node name="TNT2" parent="TNTs" instance=ExtResource("7_4urx6")]
position = Vector2(321, 450)

[node name="TNT3" parent="TNTs" instance=ExtResource("7_4urx6")]
position = Vector2(915, 467)

[node name="Stones" type="Node2D" parent="."]

[node name="Stone" parent="Stones" instance=ExtResource("8_1xpyo")]
position = Vector2(807, 486)

[node name="Stone2" parent="Stones" instance=ExtResource("8_1xpyo")]
position = Vector2(700, 416)

[node name="Stone3" parent="Stones" instance=ExtResource("8_1xpyo")]
position = Vector2(209, 382)

[node name="Diamonds" type="Node2D" parent="."]

[node name="Diamond" parent="Diamonds" instance=ExtResource("9_u8xtt")]
position = Vector2(355, 444)

[node name="Diamond2" parent="Diamonds" instance=ExtResource("9_u8xtt")]
position = Vector2(742, 481)

[node name="Golds" type="Node2D" parent="."]

[node name="Big Gold" parent="Golds" instance=ExtResource("10_0ytdb")]
position = Vector2(143, 540)

[node name="Big Gold2" parent="Golds" instance=ExtResource("10_0ytdb")]
position = Vector2(893, 538)

[node name="Big Gold3" parent="Golds" instance=ExtResource("10_0ytdb")]
position = Vector2(673, 516)

[node name="Big Gold4" parent="Golds" instance=ExtResource("10_0ytdb")]
position = Vector2(990, 444)

[node name="Big Gold5" parent="Golds" instance=ExtResource("10_0ytdb")]
position = Vector2(410, 567)

[node name="Big Gold6" parent="Golds" instance=ExtResource("10_0ytdb")]
position = Vector2(140, 336)

[node name="Normal Gold" parent="Golds" instance=ExtResource("11_deyou")]
position = Vector2(736, 374)

[node name="Normal Gold2" parent="Golds" instance=ExtResource("11_deyou")]
position = Vector2(474, 473)

[node name="Normal Gold3" parent="Golds" instance=ExtResource("11_deyou")]
position = Vector2(192, 435)

[node name="Normal Gold4" parent="Golds" instance=ExtResource("11_deyou")]
position = Vector2(551, 417)

[node name="Small Gold" parent="Golds" instance=ExtResource("12_e0frq")]
position = Vector2(256, 398)

[node name="Small Gold2" parent="Golds" instance=ExtResource("12_e0frq")]
position = Vector2(643, 391)

[node name="Small Gold4" parent="Golds" instance=ExtResource("12_e0frq")]
position = Vector2(578, 479)

[node name="Small Gold5" parent="Golds" instance=ExtResource("12_e0frq")]
position = Vector2(257, 337)

[node name="Small Gold6" parent="Golds" instance=ExtResource("12_e0frq")]
position = Vector2(417, 343)

[node name="MoneyBags" type="Node2D" parent="."]

[node name="MoneyBag" parent="MoneyBags" instance=ExtResource("14_ootwe")]
position = Vector2(756, 550)

[node name="MoneyBag2" parent="MoneyBags" instance=ExtResource("14_ootwe")]
position = Vector2(282, 507)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="VBoxContainerLeft" type="VBoxContainer" parent="CanvasLayer2"]
offset_left = 144.0
offset_top = 48.0
offset_right = 184.0
offset_bottom = 88.0

[node name="MoneyLabel" type="Label" parent="CanvasLayer2/VBoxContainerLeft"]
self_modulate = Color(0.239216, 0.2, 0.2, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("13_7f312")
script = ExtResource("14_2dipp")
metadata/_edit_use_anchors_ = true

[node name="Goal" type="Label" parent="CanvasLayer2/VBoxContainerLeft"]
self_modulate = Color(0.239216, 0.2, 0.2, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("13_7f312")
script = ExtResource("15_466aa")

[node name="VBoxContainerRight" type="VBoxContainer" parent="CanvasLayer2"]
offset_left = 768.0
offset_top = 48.0
offset_right = 808.0
offset_bottom = 88.0

[node name="Level" type="Label" parent="CanvasLayer2/VBoxContainerRight"]
self_modulate = Color(0.239216, 0.2, 0.2, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("13_7f312")
script = ExtResource("16_7ynlc")

[node name="Control" type="Control" parent="CanvasLayer2/VBoxContainerRight"]
layout_mode = 2
script = ExtResource("17_03wwd")
metadata/_edit_use_anchors_ = true

[node name="CountDownTimer" type="Label" parent="CanvasLayer2/VBoxContainerRight/Control"]
self_modulate = Color(0.239216, 0.2, 0.2, 1)
layout_mode = 2
offset_top = 4.0
offset_right = 40.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("13_7f312")

[node name="Timer" type="Timer" parent="CanvasLayer2/VBoxContainerRight/Control"]
wait_time = 60.0

[node name="Pause" type="Button" parent="CanvasLayer2"]
offset_left = 1046.0
offset_top = 19.0
offset_right = 1126.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("13_7f312")
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("18_m80ua")
theme_override_styles/hover = ExtResource("18_m80ua")
theme_override_styles/pressed = ExtResource("19_h6cef")
theme_override_styles/focus = ExtResource("18_m80ua")
text = "PAUSE"
metadata/_edit_use_anchors_ = true

[node name="Skip Level" type="Button" parent="CanvasLayer2"]
offset_left = 1046.0
offset_top = 53.0
offset_right = 1126.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("13_7f312")
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("18_m80ua")
theme_override_styles/hover = ExtResource("18_m80ua")
theme_override_styles/pressed = ExtResource("19_h6cef")
theme_override_styles/focus = ExtResource("18_m80ua")
text = "SKIP
"
metadata/_edit_use_anchors_ = true

[node name="Pause_Menu" parent="CanvasLayer2" instance=ExtResource("20_6kyt4")]
metadata/_edit_use_anchors_ = true

[connection signal="toggle_game_paused" from="." to="CanvasLayer2/Pause_Menu" method="_on_level_2_toggle_game_paused"]
[connection signal="hook_move_down_status" from="Rope/Claw" to="Rope" method="_on_claw_hook_move_down_status"]
[connection signal="timeout" from="CanvasLayer2/VBoxContainerRight/Control/Timer" to="CanvasLayer2/VBoxContainerRight/Control" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer2/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer2/Skip Level" to="." method="_on_skip_level_pressed"]
